Cleanup JavaSourceFileType